# APO-ing-de-producto

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/_schema/: README.md  classification-rules.schema.json  file-map.schema.json  project.schema.json  readmes.schema.json  structure.schema.json
config/alicia-arouesty/: classification-rules.json  file-map.json  project.json  readmes.json  structure.json
core/: __init__.py
core/config/: __init__.py  loader.py  models.py  parser.py
core/shared/: __init__.py  events.py  exceptions.py  logger.py
docs/: README.md
examples/demo/: classification-rules.json  file-map.json  project.json  readmes.json  structure.json
tests/: __init__.py
