[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apo"
version = "0.1.0"
description = "AIMARKTECH Project Organizer"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    {name = "AIMARKTECH"}
]

dependencies = [
    "click>=8.1.8",
    "jsonschema>=4.23.0",
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "black>=24.0",
    "ruff>=0.5",
    "isort>=5.13"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
